force-app/main/default/objects/sugati__Itinerary_Content_Category__c/sugati__Itinerary_Content_Category__c.object-meta.xml
<CustomObject>
    <label>Content Category</label>
    <nameField>
        <label>Itinerary Content Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>