force-app/main/default/objects/sugati__Itinerary_Content_Category__c/fields/sugati__Final_Doc__c.field-meta.xml
<CustomField>
    <fullName>sugati__Final_Doc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Doc</label>
    <type>Checkbox</type>
</CustomField>