force-app/main/default/objects/sugati__Itinerary_Content_Category__c/fields/sugati__ICC_Columns__c.field-meta.xml
<CustomField>
    <fullName>sugati__ICC_Columns__c</fullName>
    <label>Columns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>