force-app/main/default/objects/sugati__Itinerary_Content_Category__c/fields/sugati__ICC_Content_Category_Label__c.field-meta.xml
<CustomField>
    <fullName>sugati__ICC_Content_Category_Label__c</fullName>
    <label>Content Category Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>