force-app/main/default/objects/sugati__Itinerary_Content_Category__c/fields/sugati__ICC_Display_On_Itinerary_PDF__c.field-meta.xml
<CustomField>
    <fullName>sugati__ICC_Display_On_Itinerary_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display on Itinerary PDF</label>
    <type>Checkbox</type>
</CustomField>