force-app/main/default/objects/sugati__Itinerary_Content_Category__c/fields/sugati__ICC_Title_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__ICC_Title_Color__c</fullName>
    <label>Title Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>