force-app/main/default/objects/sugati__Itinerary_Content_Category__c/recordTypes/sugati__Print.recordType-meta.xml
<RecordType>
    <fullName>sugati__Print</fullName>
    <active>true</active>
    <label>Print</label>
</RecordType>