force-app/main/default/objects/sugati__Itinerary_Content_Category__c/recordTypes/sugati__Web.recordType-meta.xml
<RecordType>
    <fullName>sugati__Web</fullName>
    <active>true</active>
    <label>Web</label>
</RecordType>